# oracle

./: dune-project  oracle.opam
src/: dune  oracle.ml  oracle_intf.ml
tests/: dune  main.ml  prog.ml
